--- a/_includes/GDvNR.html
+++ b/_includes/GDvNR.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 
@@ -7,7 +6,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></style>          
 <style type="text/css">
     /*!
  * Bootstrap v2.3.2
@@ -176,6 +176,7 @@ div#notebook {
 
 </head>
 <body>
+  <div class="jumbotron">
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
@@ -3051,5 +3052,6 @@ rkJggg==
 </div>
     </div>
   </div>
+</div>
 </body>
 </html>
