--- a/_includes/GDvNR.html
+++ b/_includes/GDvNR.html
@@ -176,7 +176,7 @@ div#notebook {
 
 </head>
 <body>
-  <div class="jumbotron">
+  <div class="container">
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
