--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,3 +1,4 @@
+<html>
 <script type="text/x-mathjax-config"> 
     MathJax.Hub.Config({ 
         jax: ["input/TeX","output/HTML-CSS"], 
@@ -26,3 +27,4 @@
     </script>
 
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
+  </html>
